# quickcheck-state-machine

./: .gitignore  .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cabal.project  quickcheck-state-machine.cabal  shell.nix  stack.yaml
.github/workflows/: main.yaml
src/Test/: StateMachine.hs
src/Test/StateMachine/: BoxDrawer.hs  ConstructorName.hs  Diffing.hs  DotDrawing.hs  Labelling.hs  Logic.hs  Markov.hs  Parallel.hs  Sequential.hs  TreeDiff.hs  Types.hs  Utils.hs  Z.hs
src/Test/StateMachine/Lockstep/: Auxiliary.hs  NAry.hs  Simple.hs
src/Test/StateMachine/TreeDiff/: Class.hs  Expr.hs  List.hs  Pretty.hs  Tree.hs
src/Test/StateMachine/Types/: Rank2.hs  References.hs
test/: Bookstore.hs  CircularBuffer.hs  Cleanup.hs  CrudWebserverDb.hs  DieHard.hs  Echo.hs  EchoWithTracer.hs  ErrorEncountered.hs  Hanoi.hs  IORefs.hs  MemoryReference.hs  Mock.hs  Overflow.hs  ProcessRegistry.hs  RQlite.hs  SQLite.hs  Schema.hs  ShrinkingProps.hs  Spec.hs  TicketDispenser.hs  UnionFind.hs
tree-diff/Test/StateMachine/: TreeDiff.hs
tree-diff/Test/StateMachine/TreeDiff/: Class.hs  Diffing.hs  Expr.hs  List.hs  Pretty.hs  Tree.hs
