cabal-version:   3.0
name:            quickcheck-state-machine
version:         0.7.3
synopsis:        Test monadic programs using state machine based models
description:
  See README at <https://github.com/stevana/quickcheck-state-machine#readme>

homepage:        https://github.com/stevana/quickcheck-state-machine#readme
license:         BSD-3-Clause
license-file:    LICENSE
author:          Stevan Andjelkovic
maintainer:      Stevan Andjelkovic <stevan.andjelkovic@strath.ac.uk>
copyright:
  Copyright (C) 2017-2018, ATS Advanced Telematic Systems GmbH;
  2018-2019, HERE Europe B.V.;
  2019-2023, Stevan Andjelkovic.

category:        Testing
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  CONTRIBUTING.md
  README.md

tested-with:
  GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.2.8 || ==9.4.5 || ==9.6.2

source-repository head
  type:     git
  location: https://github.com/stevana/quickcheck-state-machine

common warnings
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missed-specialisations
    -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe
    -Wno-missing-local-signatures -Wno-monomorphism-restriction

  if impl(ghc >=8.8)
    ghc-options: -Wno-missing-deriving-strategies

  if impl(ghc >=8.10)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >=9.2)
    ghc-options: -Wno-missing-kind-signatures

library
  import:          warnings
  hs-source-dirs:  src
  exposed-modules:
    Test.StateMachine
    Test.StateMachine.BoxDrawer
    Test.StateMachine.ConstructorName
    Test.StateMachine.DotDrawing
    Test.StateMachine.Labelling
    Test.StateMachine.Lockstep.Auxiliary
    Test.StateMachine.Lockstep.NAry
    Test.StateMachine.Lockstep.Simple
    Test.StateMachine.Logic
    Test.StateMachine.Markov
    Test.StateMachine.Parallel
    Test.StateMachine.Sequential
    Test.StateMachine.Types
    Test.StateMachine.Types.Environment
    Test.StateMachine.Types.GenSym
    Test.StateMachine.Types.History
    Test.StateMachine.Types.Rank2
    Test.StateMachine.Types.References
    Test.StateMachine.Utils
    Test.StateMachine.Z

  -- GHC boot libraries
  build-depends:
    , base        >=4.12    && <5
    , containers  >=0.6.0.1
    , directory   >=1.3.3.0
    , exceptions  >=0.10.4
    , filepath    >=1.4.1.2
    , mtl         >=2.2.2
    , process     >=1.6.5.0
    , text        >=1.2.3.1
    , time        >=1.8.0.2

  build-depends:
    , generic-data                 >=1.1.0.0
    , graphviz                     >=2999.20.1.0
    , markov-chain-usage-model     >=0.0.0
    , matrix                       >=0.3.6.1
    , pretty-show                  >=1.10
    , prettyprinter                >=1.7.1
    , prettyprinter-ansi-terminal  >=1.1.3
    , QuickCheck                   >=2.14.3
    , random                       >=1.2.1.1
    , sop-core                     >=0.5.0.2
    , split                        >=0.2.3.5
    , tree-diff                    >=0.3.0.1
    , unliftio                     >=0.2.24.0

test-suite quickcheck-state-machine-test
  import:         warnings
  type:           exitcode-stdio-1.0

  -- GHC 9.6 cannot currently build the tests
  if impl(ghc >=9.6)
    buildable: False

  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , array
    , base
    , bifunctors
    , bytestring
    , containers
    , directory
    , doctest
    , filelock
    , filepath
    , hashable
    , hashtables
    , http-client
    , monad-logger
    , mtl
    , network
    , persistent
    , persistent-postgresql
    , persistent-sqlite
    , postgresql-simple
    , pretty-show
    , process
    , QuickCheck
    , quickcheck-instances
    , quickcheck-state-machine
    , random
    , resource-pool
    , resourcet
    , servant-client
    , servant-server
    , split
    , stm
    , strict
    , string-conversions
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , tree-diff
    , unliftio
    , unliftio-core
    , vector
    , warp

  other-modules:
    Bookstore
    CircularBuffer
    Cleanup
    CrudWebserverDb
    DieHard
    Echo
    ErrorEncountered
    Hanoi
    IORefs
    MemoryReference
    Mock
    Overflow
    ProcessRegistry
    Schema
    ShrinkingProps
    SQLite
    TicketDispenser
    UnionFind

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
