cabal-version:   3.0
name:            quickcheck-state-machine
version:         0.7.3
synopsis:        Test monadic programs using state machine based models
description:
  See README at <https://github.com/stevana/quickcheck-state-machine#readme>

homepage:        https://github.com/stevana/quickcheck-state-machine#readme
license:         BSD-3-Clause
license-file:    LICENSE
author:          Stevan Andjelkovic
maintainer:      Stevan Andjelkovic <stevan.andjelkovic@strath.ac.uk>
copyright:
  Copyright (C) 2017-2018, ATS Advanced Telematic Systems GmbH;
  2018-2019, HERE Europe B.V.;
  2019-2023, Stevan Andjelkovic.

category:        Testing
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  CONTRIBUTING.md
  README.md

tested-with:
  GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.2.8 || ==9.4.7 || ==9.6.3

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    Test.StateMachine
    Test.StateMachine.BoxDrawer
    Test.StateMachine.ConstructorName
    Test.StateMachine.DotDrawing
    Test.StateMachine.Labelling
    Test.StateMachine.Lockstep.Auxiliary
    Test.StateMachine.Lockstep.NAry
    Test.StateMachine.Lockstep.Simple
    Test.StateMachine.Logic
    Test.StateMachine.Parallel
    Test.StateMachine.Sequential
    Test.StateMachine.TreeDiff
    Test.StateMachine.TreeDiff.Class
    Test.StateMachine.TreeDiff.Expr
    Test.StateMachine.TreeDiff.List
    Test.StateMachine.TreeDiff.Pretty
    Test.StateMachine.TreeDiff.Tree
    Test.StateMachine.Types
    Test.StateMachine.Types.Environment
    Test.StateMachine.Types.GenSym
    Test.StateMachine.Types.History
    Test.StateMachine.Types.Rank2
    Test.StateMachine.Types.References
    Test.StateMachine.Utils
    Test.StateMachine.Z

  other-modules:    Paths_quickcheck_state_machine
  autogen-modules:  Paths_quickcheck_state_machine

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
    , base        >=4.10    && <5
    , containers  >=0.5.7.1
    , directory   >=1.0.0.0
    , exceptions  >=0.8.3
    , filepath    >=1.0
    , mtl         >=2.2.1
    , process     >=1.2.0.0
    , text        >=1.2.3.1
    , time        >=1.7

  build-depends:
    , ansi-wl-pprint  >=0.6.7.3
    , generic-data    >=0.3.0.0
    , graphviz        >=2999.20.0.3
    , pretty-show     >=1.6.16
    , QuickCheck      >=2.12
    , random          >=1.1
    , sop-core        >=0.5.0.2
    , split           >=0.2.3.5
    , unliftio        >=0.2.7.0

  -- tree-diff dependencies:
  build-depends:
    , base-compat   >=0.9.3
    , bytestring    >=0.10.4.0
    , generics-sop  >=0.3.1.0
    , MemoTrie      >=0.6.8
    , pretty        >=1.1.1.1
    , vector        >=0.12

  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , aeson
    , array
    , base
    , bifunctors
    , bytestring
    , containers
    , directory
    , doctest
    , filelock
    , filepath
    , hashable
    , hashtables
    , http-client
    , monad-logger
    , mtl
    , network
    , persistent
    , persistent-postgresql
    , persistent-sqlite
    , persistent-template
    , postgresql-simple
    , pretty-show
    , process
    , QuickCheck
    , quickcheck-instances
    , quickcheck-state-machine
    , random
    , resource-pool
    , resourcet
    , servant
    , servant-client
    , servant-server
    , split
    , stm
    , strict
    , string-conversions
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , unliftio
    , unliftio-core
    , vector                    >=0.12.0.1
    , wai
    , warp

  other-modules:
    Bookstore
    CircularBuffer
    Cleanup
    CrudWebserverDb
    DieHard
    Echo
    ErrorEncountered
    Hanoi
    IORefs
    MemoryReference
    Mock
    Overflow
    ProcessRegistry
    Schema
    ShrinkingProps
    SQLite
    TicketDispenser
    UnionFind

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts -Wall

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/stevana/quickcheck-state-machine
